--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             <div class="video-info">
               <p class="video-title">
-                We are Talking Tech and AI with Google CEO Sundar Pichai!
+                Put Your Headline Here!
               </p>
               <p class="video-author">
                 Marques Brownlee
