--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
     <main>
       <section class="video-grid">
+// Item 1
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-1.webp">
@@ -94,7 +95,7 @@
 
     <script>
         // Fetch the text file and display its content
-        fetch('example.txt')
+        fetch('headline1.txt')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('text-container').innerText = data;
@@ -112,7 +113,7 @@
             </div>
           </div>
         </div>
-
+// Item 2
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-2.webp">
@@ -135,7 +136,7 @@
             </div>
           </div>
         </div>
-
+// Item 3
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-3.webp">
@@ -158,7 +159,7 @@
             </div>
           </div>
         </div>
-
+// Item 4
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-3.webp">
@@ -181,7 +182,7 @@
             </div>
           </div>
         </div>
-
+// Item 5
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-5.webp">
@@ -204,7 +205,7 @@
             </div>
           </div>
         </div>
-
+// Item 6
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-6.webp">
@@ -227,7 +228,7 @@
             </div>
           </div>
         </div>
-
+// Item 7
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-7.webp">
@@ -250,7 +251,7 @@
             </div>
           </div>
         </div>
-
+// Item 8
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-8.webp">
@@ -273,8 +274,7 @@
             </div>
           </div>
         </div>
-
-        <div class="video-preview">
+// Item 9        <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-9.webp">
             <div class="video-time">NEWS 9</div>
@@ -296,7 +296,7 @@
             </div>
           </div>
         </div>
-
+// Item 10
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-10.webp">
@@ -319,7 +319,7 @@
             </div>
           </div>
         </div>
-
+// Item 11
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-11.webp">
@@ -342,7 +342,7 @@
             </div>
           </div>
         </div>
-
+// Item 12
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-12.webp">
