--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         
     <main>
       <section class="video-grid">
-// Item 1
+<!--Item 1-->
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-1.webp">
@@ -113,7 +113,7 @@
             </div>
           </div>
         </div>
-// Item 2
+<!--Item 2-->
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-2.webp">
@@ -136,7 +136,7 @@
             </div>
           </div>
         </div>
-// Item 3
+<!--Item 3-->        
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-3.webp">
@@ -159,7 +159,7 @@
             </div>
           </div>
         </div>
-// Item 4
+<!--Item 4-->
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-3.webp">
@@ -182,7 +182,7 @@
             </div>
           </div>
         </div>
-// Item 5
+<!--Item 5-->
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-5.webp">
@@ -205,7 +205,7 @@
             </div>
           </div>
         </div>
-// Item 6
+<!--Item 6-->
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-6.webp">
@@ -228,7 +228,7 @@
             </div>
           </div>
         </div>
-// Item 7
+<!--Item 7-->
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-7.webp">
@@ -251,7 +251,7 @@
             </div>
           </div>
         </div>
-// Item 8
+<!--Item 8-->
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-8.webp">
@@ -274,7 +274,8 @@
             </div>
           </div>
         </div>
-// Item 9        <div class="video-preview">
+<!--Item 9-->        
+        <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-9.webp">
             <div class="video-time">NEWS 9</div>
@@ -296,7 +297,7 @@
             </div>
           </div>
         </div>
-// Item 10
+<!--Item 10-->
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-10.webp">
@@ -319,7 +320,7 @@
             </div>
           </div>
         </div>
-// Item 11
+<!--Item 11-->
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-11.webp">
@@ -342,7 +343,7 @@
             </div>
           </div>
         </div>
-// Item 12
+<!--Item 12-->
         <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-12.webp">
