--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 <!--<a href="p2.html">Page 2</a>-->
     <nav class="sidebar">
       <div class="sidebar-link">
+        <a href="p4-load-news.html">LOAD</a>
+        <!--<img src="icons/home.svg">-->
+        <div>Home</div>
+      </div>
+      <div class="sidebar-link">
         <a href="p2.html">Page 2</a>
         <!--<img src="icons/home.svg">-->
         <div>Home</div>
@@ -124,6 +129,7 @@
               <img class="profile-picture" src="channel-pictures/Im1-02-02.png">
             </div>
             <div class="video-info">
+
               <p class="video-title">
                 Try Not To Laugh Challenge #9
               </p>
