--- a/p4-load-news.html
+++ b/p4-load-news.html
@@ -31,7 +31,15 @@
 
 
   <body>
-        
+     <script>
+        // Fetch the text file and display its content
+        fetch('headline1.txt')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('text-container').innerText = data;
+            })
+            .catch(error => console.error('Error fetching the text file:', error));
+    </script>   
   </body>
 
 </html>
