--- a/p4-load-news.html
+++ b/p4-load-news.html
@@ -31,6 +31,7 @@
 
 
   <body>
+    <div id="text-container"></div>
      <script>
         // Fetch the text file and display its content
         fetch('headline1.txt')
