--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <script>
         // Fetch the text file and display its content
-        fetch('story1.html')
+        fetch('story1.txt')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('text-container').innerText = data;
