--- a/p4-load-news.html
+++ b/p4-load-news.html
@@ -45,7 +45,7 @@
 
     <script>
         // Fetch the text file and display its content
-        fetch('headline1.txt')
+        fetch('story1.txt')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('text-container').innerText = data;
