--- a/p4-load-news.html
+++ b/p4-load-news.html
@@ -48,7 +48,7 @@
         fetch('story1.html')
             .then(response => response.text())
             .then(data => {
-                document.getElementById('text-container').innerText = data;
+                document.getElementById('text-container').innerHTML = data;
             })
             .catch(error => console.error('Error fetching the text file:', error));
     </script>
