--- a/p4-load-news.html
+++ b/p4-load-news.html
@@ -32,7 +32,7 @@
 
   <body>
    <!--Item 1-->
-        <div class="video-preview">
+       <!-- <div class="video-preview">
           <div class="thumbnail-row">
             <img class="thumbnail" src="thumbnail-1.webp">
             <div class="video-time">NEWS 1</div>
@@ -42,7 +42,7 @@
             <div class="video-info">
               <p class="video-title" >
                  <div id="text-container"></div>
-
+              -->
     <script>
         // Fetch the text file and display its content
         fetch('story1.html')
@@ -52,6 +52,7 @@
             })
             .catch(error => console.error('Error fetching the text file:', error));
     </script>
+    <!--
                 Put Your Headline Here!
               </p>
               <p class="video-author">
@@ -63,7 +64,7 @@
             </div>
           </div>
         </div>
-  
+  -->
   </body>
 
 </html>
