--- a/p4-load-news.html
+++ b/p4-load-news.html
@@ -42,7 +42,7 @@
             <div class="video-info">
               <p class="video-title" >
               -->
-                <div id="story1"></div>
+                <div class="story1"></div>
               
     <script>
         // Fetch the text file and display its content
