--- a/p4-load-news.html
+++ b/p4-load-news.html
@@ -42,7 +42,7 @@
             <div class="video-info">
               <p class="video-title" >
               -->
-                <div class="story1"></div>
+                <div class="story1">
               
     <script>
         // Fetch the text file and display its content
@@ -53,6 +53,7 @@
             })
             .catch(error => console.error('Error fetching the text file:', error));
     </script>
+                </div>
     <!--
                 Put Your Headline Here!
               </p>
