--- a/p4-load-news.html
+++ b/p4-load-news.html
@@ -10,7 +10,22 @@
     <meta name="viewport" content="width=device-width">
     <title>The Site</title>
     <link rel="stylesheet" href="styles/p2.css">
-  </head>
+    <style>
+        .story02 {
+  background-color: lightblue;
+  padding: 20px;
+  margin-left: 10%;
+  margin-right: 20%;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 15px;
+  -ms-transform: scaleY(1.1);
+  -webkit-transform: scaleY(1.1);
+  transform: scaleY(1.1);
+  font-weight: 400;
+  color: black;
+}
+    </style>
+</head>
 
 <!-----------------------Page Header--------------------------------->
   <header>  
@@ -42,7 +57,7 @@
             <div class="video-info">
               <p class="video-title" >
               -->
-                <div class="story1">
+                <div>
               
     <script>
         // Fetch the text file and display its content
