--- a/story1.html
+++ b/story1.html
@@ -1,6 +1,24 @@
+
+<style>
+
+.headline01 {font-size: medium;
+}
+
+.story01 {
+  background-color: lightpink;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 15px;
+  -ms-transform: scaleY(1.1);
+  -webkit-transform: scaleY(1.1);
+  transform: scaleY(1.1);
+  font-weight: 400;
+  color: black;
+}
+</style>
+
 <h3>Headline 1 inward from headline.txt file</h3>
 
-<textarea>
+<textarea class="story01">
 A teenage girl is living in fear and her family is considering moving interstate after her name was linked to the machete murders of two young boys in Melbourne’s west last month.
 The 14-year-old was asleep inside her home in Cobblebank on Sunday morning around 4am when three people armed with machetes tried to smash their way into the property.
 They smashed up two front windows of the family home and trashed the car in the driveway before being confronted and running from the scene.
