--- a/story1.html
+++ b/story1.html
@@ -8,14 +8,11 @@
   background-color: lightpink;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 15px;
-  -ms-transform: scaleY(1.1);
-  -webkit-transform: scaleY(1.1);
-  transform: scaleY(1.1);
-  font-weight: 400;
   color: black;
 }
 </style>
 
+<div>
 <h3>Headline 1 inward from headline.txt file</h3>
 
 <textarea class="story01">
@@ -26,3 +23,4 @@ Her father, Freddy Lecomte, says he believes it was an act of retaliation over t
 Dau Akueng, 15, and Chol Achiek, 12, were killed in a machete attack on September 7 while walking home from a nearby basketball stadium.
 The violence has shocked police and devastated the local community. There have yet to be any arrests despite CCTV footage showing three youths attacking Chol as he lay helpless on the ground.
 </textarea>
+</div>
