--- a/story1.html
+++ b/story1.html
@@ -5,6 +5,7 @@
 }
 
 .story01 {
+  display: block;
   background-color: lightpink;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 15px;
