--- a/story1.html
+++ b/story1.html
@@ -15,7 +15,7 @@
 </style>
 
 <div>
-<h3>Headline 1 inward from headline.txt file</h3>
+<h3>Headline 1 inward from headline.txt file HEADLINE ONE</h3>
 
 <textarea class="story01">
 A teenage girl is living in fear and her family is considering moving interstate after her name was linked to the machete murders of two young boys in Melbourne’s west last month.
